<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="22dp"
            android:background="@drawable/ct"
            android:ems="10"
            android:fontFamily="sans-serif-condensed"
            android:includeFontPadding="true"
            android:inputType="none"
            android:text="@string/Report_crime"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            android:textStyle="bold" />


        <EditText
            android:id="@+id/txtReportername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="164dp"
            android:background="@drawable/common_google_signin_btn_icon_light_normal_background"
            android:ems="10"
            android:hint="@string/Reporter_name"
            android:inputType="textPersonName"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/txtCrimelocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/txtReportername"
            android:layout_below="@+id/txtReportername"
            android:layout_marginTop="33dp"
            android:background="@drawable/common_google_signin_btn_icon_dark_normal_background"
            android:ems="10"
            android:hint="@string/Crime_location"
            android:inputType="textMultiLine"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/txtCrimedescritpion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/txtCrimelocation"
            android:layout_below="@+id/txtCrimelocation"
            android:layout_marginTop="26dp"
            android:background="@drawable/common_google_signin_btn_icon_dark_normal_background"
            android:ems="10"
            android:hint="@string/Crime_description"
            android:inputType="textMultiLine"
            android:textAlignment="center" />

        <Button
            android:id="@+id/btnSubmit"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="@android:dimen/thumbnail_width"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtCrimedescritpion"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="200dp"
            android:background="@drawable/mybutton4"
            android:text="@string/submit"
            android:textColor="@android:color/background_light"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtCrimedescritpion"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:padding="10dp"
            app:srcCompat="@android:drawable/ic_menu_gallery"
            />

        <Button
            android:id="@+id/btnCapture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="31dp"
            android:background="@drawable/ic_menu_camera"
            android:text="@string/Capture_crime" />


    </RelativeLayout>


</ScrollView>




