<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.hp_user.chazbaa.MainActivity"
    tools:showIn="@layout/app_bar_main">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:scaleType="centerCrop"
            app:srcCompat="@drawable/ct" />

        <Button
            android:id="@+id/btnReportincident"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_above="@+id/btnGetLocation"
            android:layout_alignStart="@+id/makeSoscall"
            android:layout_marginBottom="19dp"

            android:background="@drawable/mybutton2"
            android:padding="10dp"
            android:text="@string/Report_crime"
            android:textAllCaps="false"
            android:textColor="@android:color/background_light"
            android:textSize="14sp" />

        <Button
            android:id="@+id/btnGetLocation"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignStart="@+id/btnReportincident"
            android:layout_marginBottom="19dp"
            android:background="@drawable/mybutton"
            android:padding="10dp"
            android:text="@string/Get_location"
            android:textAllCaps="false"
            android:textColor="@android:color/background_light"
            android:textSize="14sp" />

        <ImageButton
            android:id="@+id/makeSoscall"
            android:layout_width="300dp"
            android:layout_height="45dp"
            android:layout_above="@+id/btnReportincident"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:background="@drawable/mybutton3"
            android:padding="10dp"
            android:text="@string/Call_police"
            android:textAlignment="viewEnd"
            android:textColor="@android:color/background_light"
            app:srcCompat="@android:drawable/sym_action_call" />

        <TextView
            android:id="@+id/welcomeBanner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="22dp"


            android:background="@drawable/nasarawa"
            android:ems="10"
            android:fontFamily="sans-serif-condensed"
            android:inputType="none"
            android:text="@string/Crime_Reporting_App"
            android:textAlignment="center"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/welcomeBanner"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="57dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/app_name"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            android:textSize="20sp"
            android:textStyle="bold" />


    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
